--- a/phenology-frontend/src/app/page/challenge/challenge.component.html
+++ b/phenology-frontend/src/app/page/challenge/challenge.component.html
@@ -76,7 +76,7 @@
           <div class="card-footer">
             <p>
               A növényfenológiai megfigyelések történetéről
-              <a [routerLink]="'/history'" class="card-link">itt </a>
+              <a [routerLink]="'/article'" class="card-link">itt </a>
               olvashat bővebben.
             </p>
           </div>
