--- a/phenology-frontend/src/app/page/guide/guide.component.html
+++ b/phenology-frontend/src/app/page/guide/guide.component.html
@@ -1,41 +1,37 @@
 <div class="container">
-  <div class="fixed-bg row justify-content-end">
-    <div class="col-5 dark-background">
-      <br />
-      <h2 class="p-3 text-light text-end fw-bold">
+  <div class="fixed-bg row justify-content-end mr-5">
+    <div class="col-5 my-3">
+      <h2 class="p-3 mt-5 text-end fw-bold">
         Útmutató növényfenológiai megfigyelésekre
       </h2>
-      <br />
-      <br />
     </div>
   </div>
 
-  <div>
-    <div class="card title-background mt-5" style="max-width: 70vw">
-      <h3 class="card-title fw-bold m-3">
-        A fenológiai megfigyelések jelentősége
-      </h3>
-    </div>
-
-    <div class="card mx-5 mt-n5 card-background">
-      <div class="align-middle mb-5">
-        <p class="card-text mx-5 mt-5">
-          <br />
-          A növényfenológia a növények környezeti viszonyoktól függő,
-          szabályszerű egymásutánban bekövetkező jelenségeinek (rügyfakadás,
-          virágzás, stb.) vizsgálatával foglalkozó tudomány. A vadnövények és a
-          táplálékunkként szolgáló kultúrnövényeink fejlődési fázisait az
-          időjárás döntő mértékben befolyásolja. Mivel az időjárás évről-évre
-          másként alakul, a növények is évről-évre más időpontban érik el az
-          egyes fejlettségi állapotaikat.
-
-          <br />
+  <div class="card mx-5 mt-5 card__shadow">
+    <h3 class="card-title fw-bold mt-3 mx-5">
+      A fenológiai megfigyelések jelentősége
+    </h3>
+    <div class="align-middle mb-5">
+      <p class="card-text mx-5">
+        <br />
+        A növényfenológia a növények környezeti viszonyoktól függő, szabályszerű
+        egymásutánban bekövetkező jelenségeinek (rügyfakadás, virágzás, stb.)
+        vizsgálatával foglalkozó tudomány. A vadnövények és a táplálékunkként
+        szolgáló kultúrnövényeink fejlődési fázisait az időjárás döntő mértékben
+        befolyásolja. Mivel az időjárás évről-évre másként alakul, a növények is
+        évről-évre más időpontban érik el az egyes fejlettségi állapotaikat.
+        <br />
+        <br />
+      </p>
+      <div class="mx-5 card-text">
+        <div class="float__div">
+          <div class="card__image"></div>
+        </div>
           Ezen időpontok ismerete nélkülözhetetlen pl. a gazdálkodók számára. A
           hosszú, évtizedekre szóló vadnövény fenológiai adatsorok pedig az
           éghajlat és az éghajlat-változás szempontjából rendkívül fontosak,
           hiszen a növények fejlődési stádiumai az éghajat változásával
           eltolódnak, azt nyomjelzőként mutatják.
-        </p>
       </div>
     </div>
   </div>
@@ -57,6 +53,12 @@
           növény virágba borulása között akár hosszabb idő is eltelhet,
           különösen a tél végén, tavasz elején, ezért tanulmányozzuk a lentebb
           fölsorolt fenológiai fázisokhoz tartozó küszöbértékeket.
+          <br />
+          <br />
+          Az időben hosszan elhúzódóan virágzó növényeknél (pl. mogyoró) fontos
+          információt jelent annak megfigyelése is, hogy a növény éppen
+          virágzik. Ezért rögzítsünk ilyen megfigyeléseket is, még ha a virágzás
+          kezdetének pontos napját nem is tudjuk.
         </p>
       </div>
     </div>
@@ -180,7 +182,6 @@
 
     <div class="card mx-5 mt-n5 card-background">
       <div class="align-middle mb-5">
-
         <h5 class="mt-5 mx-5"><b>Fák és cserjék</b></h5>
         <p class="card-text mx-5">
           Az alábbi lista egy általános leírás, egyes növényfajták fenológiai
@@ -306,135 +307,60 @@
     </div>
   </div>
 
-  <div class="card m-5 shadow" style="max-width: 100vw">
-    <div class="row">
-      <div class="col-md-4">
-        <img
-          src="../../../assets/image/akac.jpg"
-          class="img-fluid rounded-start"
-          alt="..."
-        />
-      </div>
-      <div class="col-md-8">
-        <div class="card-body align-middle">
-          <h3 class="card-title fw-bold text-center">
-            A megfigyelések rögzítése
-          </h3>
-          <p class="card-text">
-            <br />
-            A megfigyeléseket kérjük az OMSZ növényfenológiai megfigyelései
-            portálján, azaz ezen az oldalon rögzíteni. A rögzítéshez egy
-            egyszeri regisztrációt követően kapunk jogosultságot. Az alabbi
-            adatokat adjuk meg:
-          </p>
-          <ol class="card-text">
-            <li>
-              A megfigyelt növény <b>helyszíne</b> (település, településrész,
-              pl: Miskolc-Diósgyőr), a domborzat-lejtő iránya (sík a terület,
-              völgyben fekszik, vagy milyen irányultságú lejtőn található a
-              növény)
-            </li>
-            <li>
-              A megfigyelt növény <b>fajtája</b> (az útmutatóban szereplő magyar
-              név elegendő)
-            </li>
-            <li>A megfigyelt növény új <b>fenológiai fázisa</b></li>
-            <li>
-              A megfigyelt növény új fázisba lépésének <b>időpontja</b> (év, hó,
-              nap)
-            </li>
-          </ol>
-          <p>
-            A rögzítés időpontja lehet akár napokkal a megfigyelés időpontja
-            után is, de azért arra vigyázzunk, hogy addig rögzítsük, míg a
-            dátumra pontosan emlékszünk, vagy a megfigyeléskor jegyezzük föl a
-            megfelelő adatokat.
-          </p>
-        </div>
+  <div class="card mx-5 mt-5 card__shadow card__fullBackground">
+    <div class="card__inside">
+      <h3 class="card-title fw-bold mt-3 mx-5">
+        A fenológiai megfigyelések jelentősége
+      </h3>
+      <div class="align-middle mb-5">
+        <p class="card-text mx-5">
+          <br />
+          A növényfenológia a növények környezeti viszonyoktól függő,
+          szabályszerű egymásutánban bekövetkező jelenségeinek (rügyfakadás,
+          virágzás, stb.) vizsgálatával foglalkozó tudomány. A vadnövények és a
+          táplálékunkként szolgáló kultúrnövényeink fejlődési fázisait az
+          időjárás döntő mértékben befolyásolja. Mivel az időjárás évről-évre
+          másként alakul, a növények is évről-évre más időpontban érik el az
+          egyes fejlettségi állapotaikat.
+          <br />
+          <br />
+          Ezen időpontok ismerete nélkülözhetetlen pl. a gazdálkodók számára. A
+          hosszú, évtizedekre szóló vadnövény fenológiai adatsorok pedig az
+          éghajlat és az éghajlat-változás szempontjából rendkívül fontosak,
+          hiszen a növények fejlődési stádiumai az éghajat változásával
+          eltolódnak, azt nyomjelzőként mutatják.
+        </p>
       </div>
     </div>
   </div>
 
-  <div class="card m-5 shadow card-background" style="max-width: 100vw">
-    <div class="row my-5">
-      <div class="">
-        <div class="card-body align-middle">
-          <h3 class="card-title fw-bold text-center">Fenológiai fázisok</h3>
-          <br />
+  <div>
+    <div class="card title-background mt-5" style="max-width: 70vw">
+      <h3 class="card-title fw-bold m-3">
+        A fenológiai megfigyelések jelentősége
+      </h3>
+    </div>
 
-          <h5><b>Fák és cserjék</b></h5>
-          <p class="card-text">
-            Az alábbi lista egy általános leírás, egyes növényfajták fenológiai
-            fázisai nem az alább leírt sorrendben következnek be. Például a som
-            virágzása megelőzi a lombosodást.
-            <br />
-          </p>
-          <ol class="card-text">
-            <li>
-              <b>Rügyfakadás</b>
-              <p>
-                A rügyek felduzzadása szemmel láthatóan megindult, a
-                rügypikkelyek között megjelent a lomb- ill. a sziromlevelek
-                hegye.
-              </p>
-            </li>
-            <li>
-              <b>Lombosodás kezdete</b>
-              <p>
-                A rügyekből megjelentek az első zöld levelek, a fa távolról már
-                nem látszik csupasznak. A som estében először a virágok nyílnak,
-                csak ez után kezdődik a lombosodás.
-              </p>
-            </li>
-            <li>
-              <b>Virágzás kezdete</b>
-              <p>
-                Az első teljes mértékben kinyílt virágok megjelenése, de a
-                virágok zöme még bimbóban van.
-              </p>
-            </li>
-            <li>
-              <b>Teljes virágzás</b>
-            </li>
-            <p>
-              A normálisan fejlett bimbók zömmel kinyíltak, a sziromlevelek
-              szétterültek, a porzó és a bibe jól látható.
-            </p>
-            <li>
-              <b>Érett termés</b>
-              <p>
-                A gyümölcsöknél a termés a fajtára jellemző színt és nagyságot
-                legalább 50 %-ban elérte. Vadgesztenyénél, diónál a termésburok
-                fölrepedését kell megfigyelni.
-              </p>
-            </li>
-            <li>
-              <b>Őszi lombszíneződés kezdete</b>
-              <p>A levelek legalább 50%-a elszíneződött a fán.</p>
-            </li>
-            <li>
-              <b>Őszi lombhullás kezdete</b>
-              <p>
-                A levelek zöme felvette a fajtára jellemző jellegzetes őszi
-                színt, és legalább 10 % le is hullott.
-              </p>
-            </li>
-          </ol>
+    <div class="card mx-5 mt-n5 card-background">
+      <div class="align-middle mb-5">
+        <p class="card-text mx-5 mt-5">
           <br />
-
-          <h5><b>Lágyszárúak</b></h5>
-          <ol class="card-text">
-            <li>
-              <b>Virágzás kezdete</b>
-              <p>Az első teljes mértékben kinyílt virágok megjelenése.</p>
-            </li>
-          </ol>
-        </div>
+          A növényfenológia a növények környezeti viszonyoktól függő,
+          szabályszerű egymásutánban bekövetkező jelenségeinek (rügyfakadás,
+          virágzás, stb.) vizsgálatával foglalkozó tudomány. A vadnövények és a
+          táplálékunkként szolgáló kultúrnövényeink fejlődési fázisait az
+          időjárás döntő mértékben befolyásolja. Mivel az időjárás évről-évre
+          másként alakul, a növények is évről-évre más időpontban érik el az
+          egyes fejlettségi állapotaikat.
+          <br />
+          <br />
+          Ezen időpontok ismerete nélkülözhetetlen pl. a gazdálkodók számára. A
+          hosszú, évtizedekre szóló vadnövény fenológiai adatsorok pedig az
+          éghajlat és az éghajlat-változás szempontjából rendkívül fontosak,
+          hiszen a növények fejlődési stádiumai az éghajat változásával
+          eltolódnak, azt nyomjelzőként mutatják.
+        </p>
       </div>
     </div>
   </div>
-
-  <!--
-  <a [routerLink]="'/plant'" class="card-link">Növények részletes bemutatása</a>
-  -->
 </div>
