--- a/phenology-frontend/src/app/page/home/home.component.html
+++ b/phenology-frontend/src/app/page/home/home.component.html
@@ -12,7 +12,7 @@
 
       <div class="card shadow bg-body rounded card-deck__card mx-4">
         <img
-          src="../../../assets/image/gyongyvirag.jpg"
+          src="../../../assets/home_image/gyongyvirag.jpg"
           class="card-img-top"
           alt="..."
         />
@@ -21,12 +21,7 @@
           <h3 class="card-title">Növényfenológiai megfigyelések</h3>
           <p class="card-text">
             A növények fejlődése összegzi a környezeti hatásokat, így a növény kiváló meteorológiai eszköz
-            az éghajlat, az éghajlat változásának jellemzésére. A fenológiai
-            jelenségek a növény fejlődésének látható jelei, a fenológiai fázisok
-            az egyes élettani szakaszok határpontjai, melyek szabályszerű
-            rendben követik egymást, ezért hű képet adnak a fejlődés üteméről. A
-            fenológia eredeti feladata a fejlődési fázisok naptári időpontok
-            szerinti feljegyzése volt.
+            az éghajlat, az éghajlat változásának jellemzésére.
           </p>
           <div class="card-footer mt-auto">
             <a [routerLink]="'/history'" class="card-link">Bővebben</a>
@@ -36,7 +31,7 @@
 
       <div class="card shadow bg-body rounded card-deck__card mx-4">
         <img
-          src="../../../assets/image/megfigyelok.jpg"
+          src="../../../assets/home_image/megfigyelok.jpg"
           class="card-img-top"
           alt="..."
         />
@@ -44,13 +39,9 @@
           <h5>Én is részt vehetek?</h5>
           <h3 class="card-title">Legyen Ön is megfigyelő!</h3>
           <p class="card-text">
-            Önkénteseket keresünk növényfenológiai megfigyelésekhez: A feladat
+            Önkénteseket keresünk növényfenológiai megfigyelésekhez. A feladat
             nagyon egyszerű, figyelni kell, hogy egy-egy növény pl. mikor kezd
-            virágozni, mikor lombosodik, mikor kezd ősszel hullani a levele, és
-            azt itt egy rövid regisztráció után rögzíteni. Ha
-            ma nem figyeljük és mérjük meg a környezetünk állapotát és azt nem
-            dokumentáljuk, akkor azt a jövőben már soha senki nem fogja tudni
-            megmérni, megfigyelni.
+            virágozni, és azt itt egy rövid regisztráció után rögzíteni.
           </p>
           <div class="card-footer mt-auto">
             <a [routerLink]="'/challenge'" class="card-link">Bővebben</a>
@@ -60,7 +51,7 @@
 
       <div class="card shadow bg-body rounded card-deck__card mx-4">
         <img
-          src="../../../assets/image/termes.jpg"
+          src="../../../assets/home_image/termes.jpg"
           class="card-img-top"
           alt="..."
         />
