--- a/phenology-frontend/src/app/page/guide/guide.component.scss
+++ b/phenology-frontend/src/app/page/guide/guide.component.scss
@@ -40,6 +40,35 @@ h5 {
   border-top: 3px solid rgb(0, 212, 35);
 }
 
+i {
+  font-size: 6em;
+  margin: 10px 0 20px 30px;
+}
+
+.fa-pagelines {
+  color: rgb(0, 95, 0);
+}
+
+.fa-leaf {
+  color: green;
+}
+
+.fa-envira {
+  color: rgb(0, 177, 0);
+}
+
+.fa-eye {
+  color: rgb(0, 123, 255);
+}
+
+.fa-calendar {
+  color: rgb(128, 40, 40);
+}
+
+.fa-pagelines-autumn {
+  color: rgb(196, 157, 0);
+}
+
 .card-background{
   background-color: rgb(255, 255, 255);
   box-shadow: 4px 4px 8px 4px rgba(0, 0, 0, 0.2), 0px 6px 20px 4px rgba(0, 0, 0, 0.19);
