--- a/phenology-frontend/src/app/page/history/history.component.html
+++ b/phenology-frontend/src/app/page/history/history.component.html
@@ -1,77 +1,134 @@
-<div class="mt-5">
-  <div class="container">
-    <div class="fixed-bg importance-bg row justify-content-end">
-      <div class="col-5 dark-background py-1">
-        <h2 class="p-3 text-light text-center fw-bold">
-          A növényfenológia jelentősége
-        </h2>
-        <h5 class="p-3 text-light text-justify">
-          Az éghajlat a meteorológiai elemek sokaságának statisztikai elemzése
-          révén írható le, viszont a növények életciklusának alakulása, valamint
-          a növényi produkció összegzi a környezeti hatásokat, az időjárási
-          elemek összhatását mutatja. Így a növény kiváló meteorológiai eszköz
-          az éghajlat, az éghajlat változásának jellemzésére.
-        </h5>
+<div class="container">
+  <h2 class="p-3 mt-5 text-center fw-bold">A növényfenológia jelentősége</h2>
+
+  <div class="card mx-5 mt-5 card__shadow">
+    <h3 class="card-title fw-bold mt-4 mx-5">fenológia = megjelenéstan</h3>
+    <div class="align-middle mb-5">
+      <p class="card-text mx-5">
+        <br />
+        Az éghajlat a meteorológiai elemek sokaságának statisztikai elemzése
+        révén írható le, viszont a növények életciklusának alakulása, valamint a
+        növényi produkció összegzi a környezeti hatásokat, az időjárási elemek
+        összhatását mutatja. Így a növény kiváló meteorológiai eszköz az
+        éghajlat, az éghajlat változásának jellemzésére.
+        <br />
+        <br />
+        A (fito)fenológia a növények környezeti viszonyoktól függő, szabályszerű
+        egymásutánban bekövetkező jelenségeinek vizsgálatával foglalkozó
+        tudomány. A fenológiai jelenségek a növény fejlődésének látható jelei, a
+        fenológiai fázisok az egyes élettani szakaszok határpontjai, melyek
+        szabályszerű rendben követik egymást, ezért hű képet adnak a fejlődés
+        üteméről. A fenológia eredeti feladata a fejlődési fázisok naptári
+        időpontok szerinti feljegyzése volt.
+        <br />
+        <br />
+        Az évtizedek során többször változott a növényfenológiai megfigyelések
+        célja. A XX. század közepéig a természettudományos érdeklődés és az
+        ismeretszerzés, a XX. század közepétől a mezőgazdasági termesztés
+        föllendítése, a termés- és a vegyszeres növényvédelem-optimalizálás, a
+        XXI. században pedig egyre inkább az éghajlatváltozás nyomon követése
+        lett a fő cél.
+        <br />
+        <br />
+        A hőmérséklet emelkedésével az éghajlati övek eltolódnak, a mérsékelt
+        szélességeken a vegetációs időszak hosszabbodik, a kártevők és kórokozók
+        elterjedési területe is megváltozik. A növények komplex módon reagálnak
+        az éghajat változására, így a hosszú fenológiai adatsorok hűen tükrözik
+        a klíma változását.
+      </p>
+      <div class="mx-5 card-text">
+        <div class="float__div">
+          <i class="fa fa-pagelines"></i>
+        </div>
+        Genfben a XIX. század eleje óta folyamatosan végeznek észleléseket a
+        gesztenye lombosodásának kezdeti időpontjára vonatkozóan. Aono és Kazui
+        2008-ban megjelent tudományos cikkükben a Japánban tradicionálisan
+        kultikus jelentőséggel bíró, s ezért Kiotóban különböző formában több
+        mint egy évezrede dokumentált japáncseresznye virágzás időpontját
+        rekonstruálták az i.sz. 801‒2005. közötti időszakra vonatkozóan. Korábbi
+        kutatási eredményekre támaszkodva és korabeli naplók, krónikák,
+        költemények és újság-cikkek adatait is felhasználva a kérdéses időszak
+        éveinek több mint 60%-ára számszerűen előállították a márciusi-április
+        közepi cseresznyevirágzás időpontját, s az így nyert adatbázis alapján
+        elemezték a területre jellemző éghajlatingadozásokat.
       </div>
-    </div>
-
-    <h3 class="py-5 text-center"><b>fenológia = megjelenéstan </b></h3>
-
-    <p class="py-3 text-justify">
-      A (fito)fenológia a növények környezeti viszonyoktól függő, szabályszerű
-      egymásutánban bekövetkező jelenségeinek vizsgálatával foglalkozó tudomány.
-      A fenológiai jelenségek a növény fejlődésének látható jelei, a fenológiai
-      fázisok az egyes élettani szakaszok határpontjai, melyek szabályszerű
-      rendben követik egymást, ezért hű képet adnak a fejlődés üteméről. A
-      fenológia eredeti feladata a fejlődési fázisok naptári időpontok szerinti
-      feljegyzése volt.
-    </p>
-
-    <p class="py-3 text-justify">
-      Az évtizedek során többször változott a növényfenológiai megfigyelések
-      célja. A XX. század közepéig a természettudományos érdeklődés és az
-      ismeretszerzés, a XX. század közepétől a mezőgazdasági termesztés
-      föllendítése, a termés- és a vegyszeres növényvédelem-optimalizálás, a
-      XXI. században pedig egyre inkább az éghajlatváltozás nyomon követése lett
-      a fő cél.
-    </p>
-
-    <p class="py-3 text-justify">
-      A hőmérséklet emelkedésével az éghajlati övek eltolódnak, a mérsékelt
-      szélességeken a vegetációs időszak hosszabbodik, a kártevők és kórokozók
-      elterjedési területe is megváltozik. A növények komplex módon reagálnak az
-      éghajat változására, így a hosszú fenológiai adatsorok hűen tükrözik a
-      klíma változását.
-    </p>
-
-    <p class="py-3 text-justify">
-      Genfben a XIX. század eleje óta folyamatosan végeznek észleléseket a
-      gesztenye lombosodásának kezdeti időpontjára vonatkozóan. Aono és Kazui
-      2008-ban megjelent tudományos cikkükben a Japánban tradicionálisan
-      kultikus jelentőséggel bíró, s ezért Kiotóban különböző formában több mint
-      egy évezrede dokumentált japáncseresznye virágzás időpontját
-      rekonstruálták az i.sz. 801‒2005. közötti időszakra vonatkozóan. Korábbi
-      kutatási eredményekre támaszkodva és korabeli naplók, krónikák,
-      költemények és újság-cikkek adatait is felhasználva a kérdéses időszak
-      éveinek több mint 60%-ára számszerűen előállították a márciusi-április
-      közepi cseresznyevirágzás időpontját, s az így nyert adatbázis alapján
-      elemezték a területre jellemző éghajlatingadozásokat.
-    </p>
-
-    <div class="container my-5 border shadow justify-content-center mb-5">
-      <div class="d-flex justify-content-center">
-        <img
-          src="../../../assets/image/5-Figure2-1.png"
-          class="illustration my-5"
-          alt=""
-        />
-      </div>
-
-      <label for="illustration" class="d-block text-center mb-3 fst-italic"
-        >A japáncseresznye virágzási időpontja Kiotóban 801. és 2005. között az
-        évből eltelt napok számában megadva Yasuyuki Aono és Keiko Kazui nyomán
-        (Int. J. Climatol. 2008.)</label
-      >
     </div>
   </div>
+
+  <div class="card mx-5 mt-5 card__shadow">
+    <div class="d-flex justify-content-center">
+      <img
+        src="../../../assets/image/5-Figure2-1.png"
+        class="illustration my-5"
+        alt=""
+        style="width: 90%"
+      />
+    </div>
+
+    <label for="illustration" class="d-block text-center mb-3 fst-italic mx-5"
+      >A japáncseresznye virágzási időpontja Kiotóban 801. és 2005. között az
+      évből eltelt napok számában megadva Yasuyuki Aono és Keiko Kazui nyomán
+      (Int. J. Climatol. 2008.)</label
+    >
+  </div>
+<!--
+  <div class="fixed-bg importance-bg row justify-content-end">
+    <div class="col-5 dark-background py-1">
+      <h2 class="p-3 text-light text-center fw-bold">
+        A növényfenológia jelentősége
+      </h2>
+      <h5 class="p-3 text-light text-justify">
+        Az éghajlat a meteorológiai elemek sokaságának statisztikai elemzése
+        révén írható le, viszont a növények életciklusának alakulása, valamint a
+        növényi produkció összegzi a környezeti hatásokat, az időjárási elemek
+        összhatását mutatja. Így a növény kiváló meteorológiai eszköz az
+        éghajlat, az éghajlat változásának jellemzésére.
+      </h5>
+    </div>
+  </div>
+
+  <h3 class="py-5 text-center"><b>fenológia = megjelenéstan </b></h3>
+
+  <p class="py-3 text-justify">
+    A (fito)fenológia a növények környezeti viszonyoktól függő, szabályszerű
+    egymásutánban bekövetkező jelenségeinek vizsgálatával foglalkozó tudomány. A
+    fenológiai jelenségek a növény fejlődésének látható jelei, a fenológiai
+    fázisok az egyes élettani szakaszok határpontjai, melyek szabályszerű
+    rendben követik egymást, ezért hű képet adnak a fejlődés üteméről. A
+    fenológia eredeti feladata a fejlődési fázisok naptári időpontok szerinti
+    feljegyzése volt.
+  </p>
+
+  <p class="py-3 text-justify">
+    Az évtizedek során többször változott a növényfenológiai megfigyelések
+    célja. A XX. század közepéig a természettudományos érdeklődés és az
+    ismeretszerzés, a XX. század közepétől a mezőgazdasági termesztés
+    föllendítése, a termés- és a vegyszeres növényvédelem-optimalizálás, a XXI.
+    században pedig egyre inkább az éghajlatváltozás nyomon követése lett a fő
+    cél.
+  </p>
+
+  <p class="py-3 text-justify">
+    A hőmérséklet emelkedésével az éghajlati övek eltolódnak, a mérsékelt
+    szélességeken a vegetációs időszak hosszabbodik, a kártevők és kórokozók
+    elterjedési területe is megváltozik. A növények komplex módon reagálnak az
+    éghajat változására, így a hosszú fenológiai adatsorok hűen tükrözik a klíma
+    változását.
+  </p>
+
+  <p class="py-3 text-justify">
+    Genfben a XIX. század eleje óta folyamatosan végeznek észleléseket a
+    gesztenye lombosodásának kezdeti időpontjára vonatkozóan. Aono és Kazui
+    2008-ban megjelent tudományos cikkükben a Japánban tradicionálisan kultikus
+    jelentőséggel bíró, s ezért Kiotóban különböző formában több mint egy
+    évezrede dokumentált japáncseresznye virágzás időpontját rekonstruálták az
+    i.sz. 801‒2005. közötti időszakra vonatkozóan. Korábbi kutatási eredményekre
+    támaszkodva és korabeli naplók, krónikák, költemények és újság-cikkek
+    adatait is felhasználva a kérdéses időszak éveinek több mint 60%-ára
+    számszerűen előállították a márciusi-április közepi cseresznyevirágzás
+    időpontját, s az így nyert adatbázis alapján elemezték a területre jellemző
+    éghajlatingadozásokat.
+  </p>
+ -->
+
 </div>
