--- a/phenology-frontend/src/app/common/navigation/navigation.component.html
+++ b/phenology-frontend/src/app/common/navigation/navigation.component.html
@@ -108,100 +108,92 @@
   </div>
 </nav>
 
-<nav class="navbar navbar-expand-lg navbar__bottom">
-  <div class="container-fluid justify-content-center">
-    <div class="">
-      <button
-        class="navbar-toggler text-white"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarTogglerDemo02"
-        aria-controls="navbarTogglerDemo02"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <i class="fa fa-bars"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a
-              class="nav-link text-white me-3"
-              routerLinkActive="active"
-              [routerLinkActiveOptions]="{exact: true}"
-              aria-current="page"
-              routerLink="/observation"
-              >Új megfigyelés</a
-            >
-          </li>
-
-          <li class="nav-item">
-            <a
-              class="nav-link text-white me-3"
-              routerLinkActive="active"
-              [routerLinkActiveOptions]="{exact: true}"
-              aria-current="page"
-              routerLink="/data"
-              >Megfigyelések</a
-            >
-          </li>
-
-          <li class="nav-item">
-            <a
-              class="nav-link text-white me-3"
-              routerLinkActive="active"
-              [routerLinkActiveOptions]="{exact: true}"
-              aria-current="page"
-              routerLink="/history"
-              >Jelentőség</a
-            >
-          </li>
-
-          <li class="nav-item">
-            <a
-              class="nav-link text-white me-3"
-              routerLinkActive="active"
-              [routerLinkActiveOptions]="{exact: true}"
-              aria-current="page"
-              routerLink="/challenge"
-              >Kihívás</a
-            >
-          </li>
-
-          <li class="nav-item">
-            <a
-              class="nav-link text-white me-3"
-              routerLinkActive="active"
-              [routerLinkActiveOptions]="{exact: true}"
-              aria-current="page"
-              routerLink="/guide"
-              >Útmutató</a
-            >
-          </li>
-
-          <li class="nav-item">
-            <a
-              class="nav-link text-white me-3"
-              routerLinkActive="active"
-              [routerLinkActiveOptions]="{exact: true}"
-              aria-current="page"
-              routerLink="/plant"
-              >Növények</a
-            >
-          </li>
-
-          <li class="nav-item">
-            <a
-              class="nav-link text-white me-3"
-              routerLinkActive="active"
-              [routerLinkActiveOptions]="{exact: true}"
-              aria-current="page"
-              routerLink="/article"
-              >Cikkek</a
-            >
-          </li>
-        </ul>
-      </div>
+<nav class="navbar navbar-expand-lg navbar__bottom d-flex justify-content-center">
+  <div class="">
+    <button
+      class="navbar-toggler text-white"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <i class="fa fa-bars"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a
+            class="nav-link text-white me-3"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            aria-current="page"
+            routerLink="/observation"
+            >Új megfigyelés</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link text-white me-3"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            aria-current="page"
+            routerLink="/data"
+            >Megfigyelések</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link text-white me-3"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            aria-current="page"
+            routerLink="/history"
+            >Jelentőség</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link text-white me-3"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            aria-current="page"
+            routerLink="/challenge"
+            >Kihívás</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link text-white me-3"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            aria-current="page"
+            routerLink="/guide"
+            >Útmutató</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link text-white me-3"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            aria-current="page"
+            routerLink="/plant"
+            >Növények</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link text-white me-3"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            aria-current="page"
+            routerLink="/article"
+            >Cikkek</a
+          >
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
