--- a/phenology-frontend/src/app/page/challenge/challenge.component.html
+++ b/phenology-frontend/src/app/page/challenge/challenge.component.html
@@ -1,20 +1,93 @@
-<div class="m-5">
-  <div class="fixed-bg row justify-content-end">
+<div class="container">
+  <h2 class="mt-5 fw-bold text-center">Önkénteseket keresünk!</h2>
+  <h4 class="mt-2 fw-bold text-center">Csatlakozzon hozzánk!</h4>
+
+  <!-- <div class="fixed-bg row justify-content-end">
     <div class="col-5 dark-background">
       <br />
-      <h2 class="p-3 text-light text-end fw-bold">Önkénteseket keresünk!</h2>
       <br />
       <br />
-      <h3 class="p-3 text-light text-end fw-bold">Csatlakozzon hozzánk!</h3>
     </div>
-  </div>
+  </div> -->
 
   <!-- <div class="fixed-bg">
     <h1 class="p-3 text-light text-end fw-bold">Önkénteseket keresünk!</h1>
     <h3 class="p-3 text-light text-end fw-bold">Csatlakozz hozzánk!</h3>
   </div> -->
 
-  <div class="card m-5 shadow" style="max-width: 100vw">
+  <div class="card mx-5 mt-5 card__shadow">
+    <h3 class="card-title fw-bold mt-4 mx-5">Mit kell tenni?</h3>
+    <div class="align-middle mb-5">
+      <p class="card-text mx-5">
+        <br />
+        A feladat nagyon egyszerű, figyelni kell, hogy egy-egy növény pl. mikor
+        kezd virágozni, mikor lombosodik, mikor kezd ősszel hullani a levele, és
+        azt itt egy rövid regisztráció után rögzíteni. Nem kell mindenféle
+        növényt folyamatosan figyelni, ha valaki csak egy növényfaj egy
+        fejlődési fázisának kezdetét tudja megfigyelni, az is nagyon jó. Rajtunk
+        múlik: amennyire lehetőségünk van, amennyit időnk, energiánk enged.
+      </p>
+      <div class="mx-5 card-text">
+        <div class="float__div">
+          <i class="fa fa-calendar"></i>
+        </div>
+        Ha ma nem figyeljük és mérjük meg a környezetünk állapotát (pl.
+        időjárást, növényeket), valamint azt nem dokumentáljuk, akkor azt a
+        jövőben már soha senki nem fogja tudni megmérni, megfigyelni.
+        <br />
+        <br />
+        Az <a routerLink="/guide" class="link text-blue">útmutatóban</a>
+        részletes leírás található a megfigyelések technikájáról, valamint
+        segítjük a
+        <a routerLink="/plant" class="link text-blue">növények</a>
+        és fenológiai fázisainak beazonosítását is.
+      </div>
+    </div>
+  </div>
+
+  <div class="card mx-5 my-5 card__shadow">
+    <h3 class="card-title fw-bold mt-4 mx-5">Mi értelme van ennek?</h3>
+    <div class="align-middle mb-5">
+      <p class="card-text mx-5">
+        <br />
+        A növényfenológia a növények környezeti viszonyoktól függő, szabályszerű
+        egymásutánban bekövetkező jelenségeinek (rügyfakadás, virágzás, stb.)
+        vizsgálatával foglalkozó tudomány. A vadnövények és a táplálékunkként
+        szolgáló kultúrnövényeink fejlődési fázisait az időjárás döntő mértékben
+        befolyásolja. Mivel az időjárás évről-évre másként alakul, a növények is
+        évről-évre más időpontban érik el az egyes fejlettségi állapotaikat.
+      </p>
+      <div class="mx-5 card-text">
+        <div class="float__div">
+          <i class="fa fa-leaf"></i>
+        </div>
+        A hosszú, évtizedekre szóló vadnövény fenológiai adatsorok az éghajlat
+        és az éghajlat-változás szempontjából rendkívül fontosak, hiszen a
+        növények fejlődési stádiumai az éghajat változásával eltolódnak, azt
+        nyomjelzőként mutatják. Ezért a növényfenológiai megfigyeléseknek óriási
+        jelentősége van.
+        <br />
+        <br />
+        A növényfenológiai megfigyelések történetéről
+        <a [routerLink]="'/article'" class="card-link">itt </a>
+        olvashat bővebben.
+      </div>
+    </div>
+  </div>
+
+  <div class="py-5">
+    <h2 class="mt-5 fw-bold text-center">
+      Megfigyeléseivel bővítse Ön is hazánk fenológiai adatsorát, nemzeti
+      vagyonunkat!
+    </h2>
+
+    <h4 class="mt-2 mb-5 fw-bold text-center">
+      Közreműködését előre is köszönjük!
+    </h4>
+  </div>
+</div>
+
+<!--   <div class="card m-5 shadow" style="max-width: 100vw">
     <div class="row">
       <div class="col-md-4">
         <img
@@ -104,4 +177,4 @@
       </h3>
     </div>
   </div>
-</div>
+ -->
