--- a/phenology-frontend/src/app/page/observed-datas/observed-datas.component.html
+++ b/phenology-frontend/src/app/page/observed-datas/observed-datas.component.html
@@ -75,11 +75,11 @@
       </tbody>
     </table>
     <div class="d-flex justify-content-center">
-      <style>
+      <!-- <style>
         .my-pagination /deep/ .ngx-pagination .current {
           background: darkgreen;
         }
-      </style>
+      </style> -->
       <pagination-controls
         class="my-pagination"
         (pageChange)="p = $event"
