--- a/phenology-frontend/src/app/common/footer/footer.component.html
+++ b/phenology-frontend/src/app/common/footer/footer.component.html
@@ -2,7 +2,7 @@
   <footer
     class="d-flex flex-wrap justify-content-lg-between justify-content-center align-items-center py-3 border-top"
   >
-    <div class="col-md-4 d-flex align-items-center justify-content-center">
+    <div class="col-md-4 d-flex align-items-center justify-content-start">
       <div class="tooltipp border-bottom pb-3 mb-3">
         <span class="text-muted">
           <a
@@ -12,7 +12,7 @@
             >© 2022 Országos Meteorológiai Szolgálat</a
           >
         </span>
-        <span class="tooltipptext">Szerzői jogok</span>
+        <!-- <span class="tooltipptext">Szerzői jogok</span> -->
       </div>
     </div>
 
@@ -52,7 +52,7 @@
               height="auto"
             />
           </a>
-          <span class="tooltipptext">Twitter</span>
+          <!-- <span class="tooltipptext">Twitter</span> -->
         </div>
       </li>
       <li class="ms-3">
@@ -69,7 +69,7 @@
               height="auto"
             />
           </a>
-          <span class="tooltipptext">Instagram</span>
+          <!-- <span class="tooltipptext">Instagram</span> -->
         </div>
       </li>
       <li class="ms-3">
@@ -86,7 +86,7 @@
               height="auto"
             />
           </a>
-          <span class="tooltipptext">Facebook</span>
+          <!-- <span class="tooltipptext">Facebook</span> -->
         </div>
       </li>
       <li class="ms-3">
@@ -103,7 +103,7 @@
               height="auto"
             />
           </a>
-          <span class="tooltipptext">Youtube</span>
+          <!-- <span class="tooltipptext">Youtube</span> -->
         </div>
       </li>
     </ul>
