--- a/phenology-frontend/src/app/common/navigation/navigation.component.scss
+++ b/phenology-frontend/src/app/common/navigation/navigation.component.scss
@@ -1,11 +1,24 @@
 @use '../../../styles.scss';
 
-.navbar__top, .dropdown-menu {
-  background-color: styles.$base-color;
+.navbar__top {
+  border-bottom-style: solid;
+  border-width: 3px;
+  border-color: styles.$base-color;
 }
 
 .navbar__bottom {
+  border-top-style: solid;
+  border-bottom-style: solid;
+  border-width: 1px;
+  border-color: styles.$base-color;
+}
+
+.img__logo{
   background-color: styles.$base-color;
+}
+
+.navbar-brand {
+  color: styles.$base-color;
 }
 
 .OMSZ__logo{
@@ -14,6 +27,23 @@
   top: 5px;
 }
 
+.button__signIn {
+  background-color: styles.$lighten-base-color;
+  color: white;
+}
+
 .active {
   font-weight: bold;
+}
+
+.nav-link {
+  color: styles.$darken-base-color;
+}
+
+.fa-bars{
+  color: styles.$darken-base-color;
+}
+
+.dropdown-item {
+  color: styles.$darken-base-color;
 }
