--- a/phenology-frontend/src/app/page/home/home.component.scss
+++ b/phenology-frontend/src/app/page/home/home.component.scss
@@ -1,22 +1,14 @@
-/*
-.mainTitle {
-  background-image: url("../../../assets/image/mainTitleBackground.jpg");
-  min-height: 500px;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-*/
+@use '../../../styles.scss';
+
 .main_header {
   //font-size: 6rem;
-  color: darkgreen;
+  color: styles.$base-color;
   font-size: 8vw;
 }
 
 .header {
   //font-size: 2rem;
-  color: darkgreen;
+  color: styles.$base-color;
   font-size: 3vw;
 }
 
@@ -42,7 +34,7 @@
 }
 .slider:hover{
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2), 4px 4px 4px 4px rgba(0, 0, 0, 0.19) !important;
-  border-color: rgb(0, 149, 25);
+  border-color: styles.$lighten-base-color;
   border-width: 2px;
 }
 
@@ -211,25 +203,4 @@
   83%  {opacity: 0.6;}
   91.3%  {opacity: 1;}
   100% {opacity: 0.6;}
-}
-
-// cookie
-
-.container {
-  padding: 2rem 0rem;
-}
-
-.modal-dialog {
-  margin-top: 0rem;
-  max-width: 100%;
-
-  .modal-content {
-    border-radius: 0rem;
-  }
-
-  .buttons {
-    .btn {
-      margin: 0.2rem;
-    }
-  }
 }
