--- a/phenology-frontend/src/app/page/observed-datas/observed-datas.component.scss
+++ b/phenology-frontend/src/app/page/observed-datas/observed-datas.component.scss
@@ -1,3 +1,5 @@
+@use '../../../styles.scss';
+
  /* Style the Image Used to Trigger the Modal */
  .myImg {
   border-radius: 5px;
@@ -69,6 +71,10 @@
   color: #bbb;
   text-decoration: none;
   cursor: pointer;
+}
+
+.my-pagination .ngx-pagination .current {
+  background: styles.$base-color;
 }
 
 /* 100% Image Width on Smaller Screens */
